// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SearchInput /> > applies visual changes for some props 1`] = `
<div>
  <div
    class="group relative focus-within:z-10"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-magnifying-glass absolute top-[50%] translate-y-[-50%] transition-colors text-placeholder group-focus-within:text-lm-text dark:group-focus-within:text-dm-text left-3"
      data-icon="magnifying-glass"
      data-prefix="fas"
      role="img"
      viewBox="0 0 512 512"
    >
      <path
        d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376C296.3 401.1 253.9 416 208 416 93.1 416 0 322.9 0 208S93.1 0 208 0 416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
        fill="currentColor"
      />
    </svg>
    <input
      class="outline-none w-full focus-ring px-4 py-2 text-xl bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input pl-9"
      placeholder="Search..."
      type="search"
    />
  </div>
</div>
`;

exports[`<SearchInput /> > applies visual changes for some props 2`] = `
<div>
  <div
    class="group relative focus-within:z-10"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-magnifying-glass absolute top-[50%] translate-y-[-50%] transition-colors text-placeholder group-focus-within:text-lm-text dark:group-focus-within:text-dm-text left-3"
      data-icon="magnifying-glass"
      data-prefix="fas"
      role="img"
      viewBox="0 0 512 512"
    >
      <path
        d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376C296.3 401.1 253.9 416 208 416 93.1 416 0 322.9 0 208S93.1 0 208 0 416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
        fill="currentColor"
      />
    </svg>
    <input
      class="outline-none w-full focus-ring px-4 py-2 text-xl rounded-md border border-lm-input-border dark:border-dm-input-border bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input pl-9"
      placeholder="Search..."
      type="search"
      value="something"
    />
  </div>
</div>
`;

exports[`<SearchInput /> > applies visual changes for some props 3`] = `
<div>
  <div
    class="group relative focus-within:z-10 something"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-magnifying-glass absolute top-[50%] translate-y-[-50%] transition-colors text-placeholder group-focus-within:text-lm-text dark:group-focus-within:text-dm-text left-3"
      data-icon="magnifying-glass"
      data-prefix="fas"
      role="img"
      viewBox="0 0 512 512"
    >
      <path
        d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376C296.3 401.1 253.9 416 208 416 93.1 416 0 322.9 0 208S93.1 0 208 0 416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
        fill="currentColor"
      />
    </svg>
    <input
      class="outline-none w-full focus-ring px-4 py-2 text-xl rounded-md border border-lm-input-border dark:border-dm-input-border bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input pl-9"
      placeholder="Search..."
      type="search"
    />
  </div>
</div>
`;

exports[`<SearchInput /> > applies visual changes for some props 4`] = `
<div>
  <div
    class="group relative focus-within:z-10"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-magnifying-glass absolute top-[50%] translate-y-[-50%] transition-colors text-placeholder group-focus-within:text-lm-text dark:group-focus-within:text-dm-text left-3"
      data-icon="magnifying-glass"
      data-prefix="fas"
      role="img"
      viewBox="0 0 512 512"
    >
      <path
        d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376C296.3 401.1 253.9 416 208 416 93.1 416 0 322.9 0 208S93.1 0 208 0 416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
        fill="currentColor"
      />
    </svg>
    <input
      class="outline-none w-full focus-ring px-4 py-2 text-xl rounded-md border border-lm-input-border dark:border-dm-input-border bg-lm-primary dark:bg-dm-primary group-[&]/card:bg-lm-input group-[&]/card:dark:bg-dm-input pl-9 something"
      placeholder="Search..."
      type="search"
    />
  </div>
</div>
`;

exports[`<SearchInput /> > applies visual changes for some props 5`] = `
<div>
  <div
    class="group relative focus-within:z-10"
  >
    <input
      class="outline-none"
      placeholder="Search..."
      type="search"
    />
  </div>
</div>
`;
